# hrm

./: .clang-format  .clang-tidy  .cproject  .gitignore  .project  .travis.yml  CMakeLists.txt  CMakeLists.txt.user.18  Dockerfile  HighwayRoadMap.cbp  HighwayRoadMap.depend  HighwayRoadMapConfig.cmake.in  Pipfile  README.md  README.md~  hrmConfig.cmake.in
benchmark/: BenchHRM3D.cpp  BenchHRM3DAdaptive.cpp  BenchHRM3DMultiBody.cpp  BenchOMPL3D.cpp  BenchOMPL3DEllipsoid.cpp  CMakeLists.txt  benchmark_3d_highway.cpp  benchmark_3d_hrm_multi_adaptive.cpp  benchmark_3d_hrm_multibody.cpp  benchmark_3d_ompl.cpp
benchmark/highway/: CMakeLists.txt  highway_multibody.cpp  highway_multibody.h  highway_planner.cpp  highway_planner.h  hrm_multi_adaptive_planner.cpp  hrm_multi_adaptive_planner.h
benchmark/highway/include/: highway_multibody.h  highway_planner.h  hrm_multi_adaptive_planner.h
benchmark/ompl/: CMakeLists.txt  ompl_planner.cpp  ompl_planner.h  ompl_planner_ellipsoid.cpp
benchmark/ompl/include/: ompl_planner.h  ompl_planner_ellipsoid.h
demo/: CMakeLists.txt  DemoHRMRigidBodyPlanning3D.cpp  DemoOMPLArticulatedBodyPlanning3D.cpp  DemoOMPLRigidBodyPlanning3D.cpp  DemoProbHRMArticulatedBodyPlanning3D.cpp
demo/matlab/: initAddpath.m  loadPlanningScene.m  loadResults.m  movie_results_hrm_3D.m  planning_config_2D.m  planning_config_3D.m  plot_results_graph_2D.m  plot_results_graph_3D.m  plot_results_hrm_2D.m  plot_results_hrm_3D.m  plot_results_ompl_3D.m
demo/matlab/geometry/: Environment2D.m  Environment3D.m  MultiBodyTree2D.m  MultiBodyTree3D.m  RobotInit2D.m  RobotInit3D.m  SuperEllipse.m  SuperQuadrics.m
demo/matlab/util/: PathValidation3D.m  PlotBox.m  PlotRobotPose.m  generateRandomJointAngles.m  generateRobot.m  par2rotm.m  rot2.m  sc_eps.m  vertexInterpolation.m
demo/python/: MultiBodyTree.py  SuperQuadrics.py  environment.yml  plot_results_hrm_3D.py  plot_results_ompl_3D.py  requirements.txt  result_loader.py  robot_generator.py  test_geometry.py
src/: CMakeLists.txt
src/datastructure/: CMakeLists.txt  FreeSpace.cpp  FreeSpace2D.cpp  FreeSpace3D.cpp  Interval.cpp  MultiBodyTree.cpp  MultiBodyTree2D.cpp  MultiBodyTree3D.cpp
src/datastructure/include/: DataType.h  FreeSpace-inl.h  FreeSpace.h  FreeSpace2D.h  FreeSpace3D.h  Interval.h  MultiBodyTree.h  MultiBodyTree2D.h  MultiBodyTree3D.h
src/deprecated/: HRM2DMultiBody.cpp  HRM3DMultiBody.cpp  HighwayRoadMap.cpp  HighwayRoadMap.h
src/deprecated/ompl_interface/: OMPL3DArticulated.cpp
src/deprecated/ompl_planners/: OMPL3D.cpp  OMPL3D.h  OMPL3DArticulated.cpp  OMPL3DArticulated.h  OMPLEllipsoid.h  Planner3DArticulated.cpp  PlannerOMPLArticulated.cpp  PlannerOMPLArticulated.h  PlannerOMPLEllipsoid.h  (+1 more)
src/geometry/: CMakeLists.txt  FreeSpace2D.cpp  FreeSpace3D.cpp  GeomUtils.txt  LineIntersection.cpp  MeshGenerator.cpp  PointInPoly.cpp  SuperEllipse.cpp  SuperQuadrics.cpp  TightFitEllipsoid.cpp  intersectlinemesh3d.cpp  intersectlinemesh3d.h  multibodytree3d.cpp  multibodytree3d.h  ptinpoly.cpp  ptinpoly.h  superellipse.cpp  superellipse.h  superquadrics.cpp  superquadrics.h
src/planners/: Boundary.prj  CMakeLists.txt  HRM2D.cpp  HRM2DKC.cpp  HRM2DMultiBody.cpp  HRM3D.cpp  HRM3DAblation.cpp  HRM3DMultiBody.cpp  HighwayRoadMap.cpp  HighwayRoadMap2d.cpp  HighwayRoadMap3d.cpp  HighwayRoadmap.m  Hrm3dMultiBody.cpp  Hrm3dMultiBodyAdaptive.cpp  PlanningRequest.cpp  ProbHRM3D.cpp  buildmidvtx.cpp  buildmidvtx.h  highwayroadmap.cpp  highwayroadmap.h  highwayroadmap2d.cpp  highwayroadmap2d.h  highwayroadmap3d.cpp  highwayroadmap3d.h  hrm3d_multi_adaptive.cpp  hrm3d_multi_adaptive.h  hrm3d_multibody.cpp  hrm3d_multibody.h  interval.cpp  interval.h  union_interval.cpp
src/samplers/: C3FGenerator3D.cpp  C3FGenerator3DArticulated.cpp  CMakeLists.txt  FreeSpaceSE2.cpp  FreeSpaceSE3.cpp  MinkowskiLibrarySamplerSE2.cpp  MinkowskiSamplerSE2.cpp  MinkowskiSamplerSE3.cpp  Planner3DArticulated.cpp  PlannerSE2.cpp  PlannerSE3.cpp  PlannerSE3Articulated.cpp
src/util/: CMakeLists.txt  DistanceMetric.cpp  EllipsoidSQCollisionFCL.cpp  EllipsoidSeparation.cpp  ExponentialFunction.cpp  GeomUtils.cpp  InterpolateSE3.cpp  InterpolateSO3.cpp  IntersectLineMesh3d.cpp  Interval.cpp  LineIntersection.cpp  MeshGenerator.cpp  MultiBodyTree2D.cpp  MultiBodyTree3D.cpp  MultiBodyTree3d.cpp  Parse2dCsvFile.cpp  ParseURDF.cpp  PointInPoly.cpp  mesh_gen.cpp  mesh_gen.h  parse2dcsvfile.cpp  parse2dcsvfile.h
test/: CMakeLists.txt  PLANNER_test_ACS_2D.cpp  PLANNER_test_FCL_2D.cpp  PLANNER_test_FCL_3D.cpp  PLANNER_test_FCL_TGL_2D.cpp  PRM_test.cpp  PRM_test_ACS_2D.cpp  PRM_test_FCL_Ellipsoid_2D.cpp  PRM_test_FCL_SuperEllipsoid_2D.cpp  TestGeometry.cpp  TestHRM2D.cpp  TestHRM2DMultiBody.cpp  TestHRM2DTightFittedEllipse.cpp  TestHRM3D.cpp  TestHRM3DAblation.cpp  TestHRM3DMultiBody.cpp  TestMinkSampler3D.cpp  TestOMPL3D.cpp  TestOMPL3DArticulated.cpp  TestPlanning3DArticulated.cpp  TestPlanningSE3Articulated.cpp  TestProbHRM3D.cpp  Test_Highway2D.m  Test_MinkowskiES2D.m  config.h.in  initAddpath.m  plotMotion.m  plotShape.m  robotConfig.m  test.cpp  test_highway3d.cpp  test_hrm3d_multibody.cpp  union_interval.cpp
test/benchmark/: BenchHRM2D.cpp  BenchHRM3D.cpp  BenchHRM3DAblation.cpp  BenchHRM3DAdaptive.cpp  BenchHRM3DMultiBody.cpp  BenchHighway3D.cpp  BenchOMPL3D.cpp  BenchOMPL3DArticulated.cpp  BenchOMPL3DEllipsoid.cpp  BenchProbHRM3D.cpp  BenchProbHRM3DAblation.cpp  CMakeLists.txt
test/deprecated/: BenchHRM3D.cpp  CMakeLists.txt  PLANNER_test_ACS_2D.cpp  PLANNER_test_FCL_2D.cpp  PLANNER_test_FCL_3D.cpp  PLANNER_test_FCL_TGL_2D.cpp  TestHRM2DTightFittedEllipse.cpp  TestHRM3D.cpp
test/googletest/: CMakeLists.txt
test/sampler_test/: SP_test_FCL_2D.cpp  SP_test_FCL_TGL_2D.cpp
test/unit-test/: CMakeLists.txt  GTestGeometry.cpp
test/util/: CMakeLists.txt  DisplayPlanningData-inl.h  DisplayPlanningData.cpp  DisplayPlanningData.h  GTestUtils-inl.h  GTestUtils.cpp  GTestUtils.h  ParsePlanningSettings.cpp  ParsePlanningSettings.h  UtilProbHRM.cpp  highway_planner.cpp  hrm_multi_adaptive_planner.cpp  ompl_planner.cpp  ompl_planner_ellipsoid.cpp
(+744 files in other folders)
