add_library(GEOM
            FreeSpace2D.cpp
            FreeSpace3D.cpp
            LineIntersection.cpp
            MeshGenerator.cpp
            PointInPoly.cpp
            SuperEllipse.cpp
            SuperQuadrics.cpp
            TightFitEllipsoid.cpp)
target_link_libraries(GEOM
                      UTIL)
